fix event title and description wrapping

--- a/public/less/post/Event.less
+++ b/public/less/post/Event.less
@@ -1,145 +1,154 @@
 
 .post.panel.event {
-	.event-image {
-		width: 100%;
-		height: 100px;
-	}
-	.panel-header {
-		padding-top: 5px;
-		a {
-		}
-		.post-details {
-			width: 100%;
-			.top {
-				justify-content: space-between;
-				align-items: flex-end;
-				margin-bottom: 10px;
-				.main-text {
-					font-size: 1.1em;
-					.title {
-						color: black;
-					}
-					.description {
-						color: @light-font;
-						font-size: .7em;
-					}
-				}
-				.glyphicon {
-					font-size: 1.0em;
-				}
-			}
-			.bottom {
-				flex-direction: row;
-				font-size: 1em;
-				align-items: center;
-				width: 100%;
-				.addthisevent-drop {
-					border: none;
-					box-shadow: none;
-					z-index: 1 !important;
-					&:active, &:hover {
-						top: 0px;
-						border: none;
-					}
-					span {
-						line-height: 1.5;
-					}
-					.ink {
-						transition: all .2s ease-in-out;
-						&:active, &:hover {
-							top: 0px;
-							border: none;
-							background-color: rgba(0,0,0,.1);
-						}
-					}
-					.addthisevent_icon {
-						top: 22px;
-					}
-					.copyx {
-						display: none;
-					}
-				}
-				.glyphicon {
-					font-size: 1.2em;
-				}
-				.detail-button {
-					margin-right: 10px;
-					line-height: 1;
-					padding: 5px;
-					max-width: 180px;
-					.text {
-						line-height: 1.5;
-						margin-left: 5px;
-					}
-					> div {
-						display: flex;
-						flex-direction: row;
-						.glyphicon {
-							align-self: center;
-						}
-					}
-				}
-			}
-			.details, .detail-time, .dot {
-				button {
-					&:active, &:hover, &:focus {
-					}
-				}
-			}
-			.details:focus, .details:hover {
-			}
-			.details:active {
-				color: #4a4a4a;
-			}
-			.glyphicon {	
-			}
-		}
-		.badges {
-			align-self: flex-start;
-			padding-top: 10px;
-			.points, .comment-count {
-			}
-			.badge {
-			}
-		}
-	}
+  .event-image {
+    width: 100%;
+    height: 100px;
+  }
+  .panel-header {
+    padding-top: 5px;
+    a {
+    }
+    .post-details {
+      width: 100%;
+      .top {
+        justify-content: space-between;
+        align-items: flex-end;
+        margin-bottom: 10px;
+        .main-text {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          flex: 1;
+          font-size: 1.1em;
+          span.title {
+            color: black;
+            word-break: break-all;
+          }
+          span.description {
+            color: @light-font;
+            font-size: .7em;
+            word-break: break-all;
+          }
+        }
+        .badges {
+          flex-grow: 0;
+        }
+        .glyphicon {
+          font-size: 1.0em;
+        }
+      }
+      .bottom {
+        flex-direction: row;
+        font-size: 1em;
+        align-items: center;
+        width: 100%;
+        .addthisevent-drop {
+          border: none;
+          box-shadow: none;
+          z-index: 1 !important;
+          &:active, &:hover {
+            top: 0px;
+            border: none;
+          }
+          span {
+            line-height: 1.5;
+          }
+          .ink {
+            transition: all .2s ease-in-out;
+            &:active, &:hover {
+              top: 0px;
+              border: none;
+              background-color: rgba(0,0,0,.1);
+            }
+          }
+          .addthisevent_icon {
+            top: 22px;
+          }
+          .copyx {
+            display: none;
+          }
+        }
+        .glyphicon {
+          font-size: 1.2em;
+        }
+        .detail-button {
+          margin-right: 10px;
+          line-height: 1;
+          padding: 5px;
+          max-width: 180px;
+          .text {
+            line-height: 1.5;
+            margin-left: 5px;
+          }
+          > div {
+            display: flex;
+            flex-direction: row;
+            .glyphicon {
+              align-self: center;
+            }
+          }
+        }
+      }
+      .details, .detail-time, .dot {
+        button {
+          &:active, &:hover, &:focus {
+          }
+        }
+      }
+      .details:focus, .details:hover {
+      }
+      .details:active {
+        color: #4a4a4a;
+      }
+      .glyphicon {  
+      }
+    }
+    .badges {
+      align-self: flex-start;
+      padding-top: 10px;
+      .points, .comment-count {
+      }
+      .badge {
+      }
+    }
+  }
 }
 
 .create-event {
-	.modal-dialog {
-		.modal-content {
-			border: none;
-			.bevy-info {
-				.text-fields {
-					.input-group.date {
-						margin-bottom: 10px;
-						display: flex;
-    					flex-direction: row-reverse;
-						.input-group-addon {
-							border: none;
-						    border-radius: 20px;
-						    width: 35px;
-						    height: 35px;
-						    display: flex;
-						    box-shadow: @shadow1;
-						    transition: all 450ms cubic-bezier(.23,1,.32,1) 0ms;
-						    &:active {
-						    	box-shadow: @shadow2;
-						    }
-						    .glyphicon {
-						    	align-self: center;
-						    	box-shadow: none;
-						    }
-						}
-						.form-control {
-							box-shadow: none;
-							box-shadow: none;
-						    border: none;
-						    margin-left: 5px;
-						}
-					}
-				}
-			}
-		}
-	}
+  .modal-dialog {
+    .modal-content {
+      border: none;
+      .bevy-info {
+        .text-fields {
+          .input-group.date {
+            margin-bottom: 10px;
+            display: flex;
+              flex-direction: row-reverse;
+            .input-group-addon {
+              border: none;
+                border-radius: 20px;
+                width: 35px;
+                height: 35px;
+                display: flex;
+                box-shadow: @shadow1;
+                transition: all 450ms cubic-bezier(.23,1,.32,1) 0ms;
+                &:active {
+                  box-shadow: @shadow2;
+                }
+                .glyphicon {
+                  align-self: center;
+                  box-shadow: none;
+                }
+            }
+            .form-control {
+              box-shadow: none;
+              box-shadow: none;
+                border: none;
+                margin-left: 5px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
